--- a/src/Components/WidgetSelectionModal/WidgetSelectionModal.css
+++ b/src/Components/WidgetSelectionModal/WidgetSelectionModal.css
@@ -1,5 +1,3 @@
-
-
 .widget-selection-modal {
     position: fixed;
     top: 0;
@@ -13,7 +11,7 @@
 }
 
 .modal-content {
-    background: #fff;
+    background-color: #fff !important;
     border-radius: 8px;
     padding: 20px;
     width: 80%;
