--- a/src/Components/CloudAccountsWidget/CloudAccountsWidget.css
+++ b/src/Components/CloudAccountsWidget/CloudAccountsWidget.css
@@ -6,9 +6,9 @@ header {
     margin-bottom: 20px;
 }
 .chart-container {
-    width: 200px; /* Adjust width as needed */
-    height: 200px; /* Adjust height as needed */
-}
+    width: 200px;
+    height: 200px; }
+
 .widgets {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -54,17 +54,7 @@ header {
     color: #333;
 }
 
-/* 
-.widget {
-    background: #f0f4f8;
-    border-radius: 8px;
-    padding: 20px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    display: flex;
-    /* flex-direction: column; */
-    /* align-items: center; */
-/* } */ 
+
 
 .widget {
     position: relative;
@@ -123,8 +113,8 @@ header {
 }
 
 .chart-container {
-    width: 200px; /* Adjust width as needed */
-    height: 200px; /* Adjust height as needed */
+    width: 200px; 
+    height: 200px; 
 }
 
 .custom-legend {
